--- a/firstHomework/01-变量数据类型.md
+++ b/firstHomework/01-变量数据类型.md
@@ -61,7 +61,7 @@ console.log(typeof 'object'=='string')     //true
 > `typeof null === 'object';`
 >
 > - 在 JavaScript 最初的实现中，JavaScript 中的值是由一个表示类型的标签和实际数据值表示的。对象的类型标签是 0。
->   由于 null 代表的是空指针（大多数平台下值为 0x00，因此，null 的类型标签是 0，typeof null 也因此返回 "object"。
+>   由于 null 代表的是空指针（大多数平台下值为 0x00，因此,null 的类型标签是 0，typeof null 也因此返回 "object"。
 
 
 
